AKS/AKSApp/ingress-rules.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: LoadBalancer
  ports:
    - name: rabbitmq-amqp
      port: 5672
      targetPort: 5672
    - name: rabbitmq-http
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: order-service
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3002
  selector:
    app: product-service
---
apiVersion: v1
kind: Service
metadata:
  name: store-front
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: store-front
