AKS/AKSApp/teachua-aks-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teachua

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: teachua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mariadb-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-storage
        persistentVolumeClaim:
          claimName: mariadb

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: teachua
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teachua-backend
  namespace: teachua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teachua-backend
  template:
    metadata:
      labels:
        app: teachua-backend
    spec:
      containers:
      - name: teachua-backend
        image: ghcr.io/natvor/teachua-backend-natvor:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: ghcr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: teachua-backend-service
  namespace: teachua
spec:
  selector:
    app: teachua-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teachua-frontend
  namespace: teachua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teachua-frontend
  template:
    metadata:
      labels:
        app: teachua-frontend
    spec:
      containers:
      - name: teachua-frontend
        image: ghcr.io/natvor/teachua-frontend-natvor:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: teachua-frontend-service
  namespace: teachua
spec:
  selector:
    app: teachua-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teachua-ingress
  namespace: teachua
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teachua-frontend-service
            port:
              number: 80
